--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -3,7 +3,7 @@
 <head th:fragment="head (title)">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title th:text="${title}">SoundConnect</title>
+  <title th:text="${title}">Nerd-Wiki</title>
   <link rel="stylesheet" th:href="@{/css/resets.css}"/>
   <link rel="stylesheet" th:href="@{/css/layout.css}"/>
   <link rel="stylesheet" th:href="@{/css/site.css}"/>
