working on some styling for the views, and adding to the index page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,18 +4,34 @@
 <body>
     <div class="page-wrapper index-page">
         <nav th:replace="partials/nav :: nav"></nav>
-        <div class="container header-container">
-            <div class="row header-row">
-                <div class="column header-column">
+        <header class="container header-container">
+            <div class="row justify-center header-row">
+                <div class="column align-center header-column">
                     <div class="header">
                         <h1>Welcome to NerdVerse!</h1>
                     </div>
                     <div class="header-description">
-                        <p>Your one-stop shop for all game, movie, and book wiki's</p>
+                        <p>Your one-stop shop for all movie, and book wiki's</p>
                     </div>
                 </div>
             </div>
-        </div>
+        </header>
+        <section class="container">
+            <div class="row">
+                <div class="column">
+                    <h2>About NerdVerse</h2>
+                    <p>NerdVerse is a comprehensive online platform dedicated to providing in-depth information about movies, and books. Whether you're a film enthusiast, a bookworm, or simply curious about various nerdy topics, NerdVerse has got you covered.</p>
+                    <p>Our mission is to create a community-driven space where fans and experts alike can come together to explore, discuss, and learn about their favorite movies, books, characters, and everything nerdy.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <h2>What We Offer</h2>
+                    <p>At NerdVerse, you'll find an extensive collection of well-curated wiki pages filled with detailed information about movies, books, characters, and various nerdy subjects. Our team of dedicated contributors works tirelessly to ensure that the content is accurate, comprehensive, and up to date.</p>
+                    <p>In addition to our rich wiki pages, we also provide a vibrant community forum where you can engage with fellow nerds, ask questions, share insights, and participate in exciting discussions.</p>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
