--- a/src/main/resources/templates/partials/nav.html
+++ b/src/main/resources/templates/partials/nav.html
@@ -7,10 +7,9 @@
         </div>
         <div class="column nav-col grow">
             <ul>
-                <li><a href="/home">Home</a></li>
-                <li><a href="/profile">Games</a></li>
-                <li><a href="/search">Books</a></li>
-                <li><a href="/logout">Movies</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/books">Books</a></li>
+                <li><a href="/movies">Movies</a></li>
             </ul>
         </div>
     </div>
