--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -7,6 +7,16 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: #EF0405;
+}
+
+a:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /*#########################################################*/
 /*###################### NAV STYLING ######################*/
 /*#########################################################*/
@@ -34,13 +44,4 @@ body {
 .nav-col ul li {
     list-style-type: none;
     padding: 0 10px;
-}
-
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: none;
-    cursor: pointer;
 }
