--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -5,8 +5,8 @@
     <div class="page-wrapper books-wrapper">
         <nav th:replace="partials/nav :: nav"></nav>
         <header class="container">
-            <div class="row">
-                <div class="column">
+            <div class="row justify-center">
+                <div class="column align-center">
                     <div class="books-header">
                         <h1>Books</h1>
                     </div>
